--- a/style.css
+++ b/style.css
@@ -14,13 +14,39 @@ body {
 header {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     background-color: #EA5045;
     width: 100%;
     height: 30vw;
     margin: 0;
-    justify-content: center;
+
 }
 
+#login article {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 20vw;
+}
+
+
+#login article img {
+    margin: 2vw;
+}
+
+
+#continue article {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 20vw;
+}
+
+#continue article img {
+    margin: 2vw;
+}
 
 
 /*
