--- a/style.css
+++ b/style.css
@@ -44,6 +44,15 @@ header {
     margin-top: 12vw;
 }
 
+#continue article a {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 12vw;
+}
+
+
 #continue article img {
     margin: 2vw;
 }
