--- a/style.css
+++ b/style.css
@@ -17,9 +17,8 @@ header {
     justify-content: center;
     background-color: #EA5045;
     width: 100%;
-    height: 30vw;
+    height: 40vw;
     margin: 0;
-
 }
 
 #login article {
@@ -41,7 +40,7 @@ header {
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
-    margin-top: 12vw;
+    margin-top: 20vw;
 }
 
 #continue article a {
@@ -49,7 +48,7 @@ header {
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
-    margin-top: 12vw;
+    margin-top: 4vw;
 }
 
 
@@ -57,5 +56,94 @@ header {
     margin: 2vw;
 }
 
+/*burgermenu*/
+.hidden {
+    /*    display: none;*/
+    /*    transform: scale(0);*/
+    transform: translateX(-100%);
+    opacity: 0;
+}
+
+#menuknap {
+    display: inline-block;
+}
+
+#menu {
+    list-style-type: none;
+    transition: transform .3s;
+    transform-origin: top left;
+}
+
+@media only screen and (min-width: 1200px) {
+
+    #menuknap {
+        display: none;
+    }
+
+    #menu.hidden {
+        transform: translateX(0);
+        opacity: 1;
+    }
+
+    #menu li {
+        display: inline-block;
+    }
+}
+
+
 
 /****startside****/
+
+
+
+.header2 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: baseline;
+    background-color: #EA5045;
+    width: 100%;
+    height: 12vw;
+    padding: 4vw;
+
+
+
+}
+
+
+#box {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 10px;
+
+
+}
+
+.box1row {
+    background-color: #FFFFFF;
+    padding: 15px;
+    width: 25vw;
+    height: 25vw;
+    margin-bottom: 2vw;
+
+
+}
+
+.box1row img {
+    height: 55px;
+    align-content: center;
+    margin-left: 4vw;
+    margin-top: 2vw;
+
+}
+
+
+.box2row {
+    background-color: #FFFFFF;
+    padding: 15px;
+    width: 58vw;
+    height: 25vw;
+    margin-bottom: 2vw;
+
+}
