--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+}
+
+img {
+    max-width: 100%
 }
 
 /*FONTS*/
@@ -69,7 +74,7 @@ header {
 .hidden {
     /*    display: none;*/
     /*    transform: scale(0);*/
-    transform: translateX(-100%);
+    transform: translateX(+100%);
     opacity: 0;
 }
 
@@ -81,6 +86,8 @@ header {
     list-style-type: none;
     transition: transform .3s;
     transform-origin: top left;
+    background-color: #3F3140;
+    width: 100%;
 }
 
 @media only screen and (min-width: 1200px) {
@@ -142,12 +149,10 @@ header {
 }
 
 .box1row img {
-    height: 55px;
-    align-content: center;
-    margin-left: 4vw;
-    margin-top: 2vw;
-
+    margin-left: 7.5vw;
 }
+
+
 
 
 .box2row {
@@ -172,7 +177,9 @@ h1 {
     color: #EA847C;
     font-family: gibson, sans-serif;
     font-weight: 600;
-    justify-content: center;
+    font-size: 2rem;
+    margin-top: 9vw;
+    margin-left: 10vw
 }
 
 
@@ -190,7 +197,10 @@ h1 {
     justify-content: space-between;
     margin-left: 10px;
     margin-right: 10px;
+
+
 }
+
 
 #box_2 {
     display: flex;
