--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ header {
     justify-content: center;
     background-color: #EA5045;
     width: 100%;
-    height: 40vw;
+    height: 40vh;
     margin: 0;
 }
 
@@ -70,7 +70,7 @@ header {
     margin: 2vw;
 }
 
-/*burgermenu*/
+/*******burgermenu***********/
 .hidden {
     /*    display: none;*/
     /*    transform: scale(0);*/
@@ -80,15 +80,75 @@ header {
 
 #menuknap {
     display: inline-block;
+
+    position: absolute;
+    z-index: 4000;
 }
 
+
+#menuknap img {}
+
+
+
+/*postion får det til at ligge sig ovenpå det hele*/
 #menu {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
     list-style-type: none;
     transition: transform .3s;
     transform-origin: top left;
     background-color: #3F3140;
-    width: 100%;
+    width: 100vw;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    text-align: center;
+
+
+
 }
+
+#menu a {
+    color: #EA847C;
+    font-family: gibson, sans-serif;
+    font-size: 1.5em;
+    font-weight: 600;
+    text-decoration: none;
+    margin-bottom: 5px;
+}
+
+
+#menu img {
+    margin-top: 100px;
+    margin-bottom: 60px;
+}
+
+
+
+
+
+#logud {
+    color: white;
+}
+
+
+
+.footer {
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    background-color: #EA847C;
+    height: 7vh;
+    color: white;
+    font-family: gibson, sans-serif;
+    font-weight: 500;
+    font-size: 1.5rem;
+    justify-content: center;
+}
+
 
 @media only screen and (min-width: 1200px) {
 
@@ -107,8 +167,7 @@ header {
 }
 
 
-
-/****startside****/
+/********startside**********/
 
 
 
@@ -116,7 +175,6 @@ header {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: baseline;
     background-color: #EA5045;
     width: 100%;
     height: 12vw;
@@ -149,7 +207,7 @@ header {
 }
 
 .box1row img {
-    margin-left: 7.5vw;
+    margin-left: 8vw;
 }
 
 
