--- a/style.css
+++ b/style.css
@@ -200,6 +200,7 @@ figcaption {
     font-weight: 500;
     text-align: center;
     font-size: 0.9rem;
+    align-items: baseline;
 
 }
 
@@ -227,6 +228,7 @@ figcaption {
 
 .box1row img {
     margin-left: 8vw;
+    margin-top: 5vw;
 }
 
 
@@ -273,8 +275,6 @@ h2 {
     flex-direction: column;
 }
 
-.box_right {}
-
 #box_1 {
     display: flex;
     flex-wrap: wrap;
@@ -293,3 +293,6 @@ h2 {
     margin-left: 10px;
     margin-right: 10px;
 }
+
+
+/**********skema*****************/
