--- a/style.css
+++ b/style.css
@@ -31,29 +31,37 @@ header {
     justify-content: center;
     background-color: #EA5045;
     width: 100%;
-    height: 40vh;
+    height: 39vh;
     margin: 0;
 }
 
-#login article {
+form {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
-    margin-top: 10vw;
+    margin-top: 13vw;
 }
 
 
-#login article img {
-    margin: 2vw;
+input {
+    height: 9vw;
+    width: 60vw;
+    border-radius: 2em;
+    border: 1px #eeee;
+    margin-left: 20vw;
+    font-family: ;
+    color: #EA5045;
+
 }
+
+
 
 
 #continue article {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    justify-content: center;
     margin-top: 20vw;
 }
 
@@ -61,7 +69,6 @@ header {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    justify-content: center;
     margin-top: 4vw;
 }
 
@@ -84,11 +91,6 @@ header {
     z-index: 4000;
     right: 3vw;
 }
-
-
-
-
-
 
 
 
