--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ input {
     top: 0;
     left: 0;
     text-align: center;
-
+    z-index: 2000;
 
 
 
@@ -252,7 +252,8 @@ figcaption {
     height: 60vw;
 }
 
-h1 {
+
+.box2row h1 {
     color: #EA847C;
     font-family: gibson, sans-serif;
     font-weight: 600;
@@ -298,3 +299,69 @@ h2 {
 
 
 /**********skema*****************/
+
+/*************aflevering*******************/
+
+
+
+
+
+h1 {
+    font-family: canada-type-gibson;
+    color: black;
+    font-weight: 600;
+    font-size: 2rem;
+    margin-top: 9vw;
+    margin-left: 5vw
+}
+
+h3 {
+
+    font-family: canada-type-gibson;
+    color: #EA5045;
+    margin-left: 5vw;
+    font-weight: 600;
+
+
+}
+
+.grey {
+    background-color: #DEDCDB;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    margin-top: 5vw;
+    height: 15vw;
+
+
+    margin-bottom: 10vw;
+}
+
+.grey h4 {
+    font-family: canada-type-gibson;
+    font-size: 0.7rem;
+    font-weight: 600;
+    padding: 7px;
+
+
+}
+
+
+.txt {
+    font-family: canada-type-gibson;
+    font-size: 0.7rem;
+    font-weight: 400;
+    padding: 7px;
+
+}
+
+.link {
+    position: relative;
+    left: 84vw;
+    bottom: 2vw;
+}
+
+#pil {
+    position: relative;
+    left: 84vw;
+    bottom: 2vw;
+}
