--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+/*****************   Generelle indstillinger *************************/
+
+
 * {
     box-sizing: border-box;
-    margin: 0;
+    margin: 0rem;
 }
 
 img {
@@ -16,8 +19,9 @@ img {
 
 
 
+/*********************************************************************/
 
-/*LOGIN SITE*/
+/*********************  Log-in site  ********************************/
 
 body {
     margin: 0;
@@ -77,7 +81,10 @@ input {
     margin: 2vw;
 }
 
-/*******burgermenu***********/
+
+/*********************************************************************/
+
+/*********************  Burgermenuen  ********************************/
 .hidden {
     /*    display: none;*/
     /*    transform: scale(0);*/
@@ -99,7 +106,6 @@ input {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    list-style-type: none;
     transition: transform .3s;
     transform-origin: top left;
     background-color: #3F3140;
@@ -109,8 +115,7 @@ input {
     top: 0;
     left: 0;
     text-align: center;
-    z-index: 2000;
-
+    z-index: 10;
 
 
 }
@@ -118,10 +123,11 @@ input {
 #menu a {
     color: #EA847C;
     font-family: gibson, sans-serif;
-    font-size: 1.2em;
+    font-size: 1.1rem;
     font-weight: 600;
     text-decoration: none;
-    margin-bottom: 5px;
+    margin-bottom: 8vw;
+
 }
 
 
@@ -168,15 +174,15 @@ input {
         opacity: 1;
     }
 
-    #menu li {
-        display: inline-block;
-    }
+
 }
 
 
-/********startside**********/
+/*************************startside***********************************/
 
 
+
+/****************************header***********************************/
 .profil {
     position: absolute;
     right: 10vw;
@@ -196,29 +202,44 @@ input {
 
 }
 
+
+/*********************************************************************/
+/****************************boxene***********************************/
+
+
+#startside {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+
+
+
+}
+
+
+/*****************Overskrifter under ikoner **************************/
+
 figcaption {
     color: #EA847C;
     font-family: gibson, sans-serif;
     font-weight: 500;
     text-align: center;
     font-size: 0.9rem;
-    align-items: baseline;
+    margin-top: 0.5rem;
+
+
+
+
 
 }
 
 
-#box {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 10px;
-    justify-content: space-between;
-    margin-left: 10px;
-    margin-right: 10px;
+/***************** den mindste box **********************************/
 
-
-}
-
-.box1row {
+.box_small {
     background-color: #FFFFFF;
     padding: 15px;
     width: 30vw;
@@ -228,15 +249,17 @@ figcaption {
 
 }
 
-.box1row img {
+.box_small img {
     margin-left: 8vw;
     margin-top: 5vw;
+
 }
 
 
+/************************* den lange box *****************************/
 
 
-.box2row {
+.box_long {
     background-color: #FFFFFF;
     padding: 15px;
     width: 63vw;
@@ -245,7 +268,26 @@ figcaption {
 
 }
 
-.box3row {
+.box_long h1 {
+    color: #EA847C;
+    font-family: canada-type-gibson;
+    font-weight: 600;
+    font-size: 2rem;
+    margin-top: 9vw;
+    margin-left: 10vw
+}
+
+/************************** den "store" box **************************/
+
+
+.box_left {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+
+.box_big {
     background-color: #FFFFFF;
     padding: 30px;
     width: 63.3vw;
@@ -253,14 +295,6 @@ figcaption {
 }
 
 
-.box2row h1 {
-    color: #EA847C;
-    font-family: gibson, sans-serif;
-    font-weight: 600;
-    font-size: 2rem;
-    margin-top: 9vw;
-    margin-left: 10vw
-}
 
 h2 {
     color: #EA847C;
@@ -272,37 +306,13 @@ h2 {
 }
 
 
-.box_left {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-}
-
-#box_1 {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-left: 10px;
-    margin-right: 10px;
 
 
-}
 
 
-#box_2 {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-left: 10px;
-    margin-right: 10px;
-}
 
-
-/**********skema*****************/
-
-/*************aflevering*******************/
-
-
+/*********************************************************************/
+/*************************  afleveringer  ****************************/
 
 
 
@@ -324,6 +334,9 @@ h3 {
 
 
 }
+
+/*************************  grå box  ****************************/
+
 
 .grey {
     background-color: #DEDCDB;
@@ -354,6 +367,15 @@ h3 {
 
 }
 
+.txt2 {
+    font-family: canada-type-gibson;
+    font-size: 0.7rem;
+    font-weight: 400;
+    margin-top: 1rem;
+
+
+}
+
 .link {
     position: relative;
     left: 84vw;
@@ -363,6 +385,12 @@ h3 {
 #pil {
     position: relative;
     left: 84vw;
+    bottom: 2vw;
+}
+
+.link2 {
+    position: relative;
+    left: 75vw;
     bottom: 2vw;
 }
 
@@ -389,7 +417,5 @@ ul {
     padding-inline-start: 0;
 }
 
-
-
-
-}
+/*********************************************************************/
+/**********************                *******************************/
