--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ img {
 
 /*********************************************************************/
 
-/*********************  Log-in site  ********************************/
+/*********************  Log-in site  ******************************/
 
 body {
     margin: 0;
@@ -413,9 +413,11 @@ h3 {
 
 }
 
+
 ul {
-    padding-inline-start: 0;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
 }
 
-/*********************************************************************/
-/**********************                *******************************/
+/*******************************************************************/
