--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 img {
-    max-width: 100%
+    max-width: 100%;
 }
 
 /*FONTS*/
@@ -18,14 +18,13 @@ img {
 }
 
 
-
 /*********************************************************************/
 
 /*********************  Log-in site  ******************************/
 
 body {
-    margin: 0;
-    width: 100;
+    margin: 0vw;
+    width: 100%;
     background-color: #FAF7F7;
 }
 
@@ -49,12 +48,12 @@ form {
 
 
 input {
-    height: 9vw;
-    width: 60vw;
+    height: 11vw;
+    width: 75vw;
     border-radius: 2em;
     border: 1px #eeee;
-    margin-left: 20vw;
-    font-family: ;
+    margin-left: 11vw;
+    font-family: canada-type-gibson;
     color: #EA5045;
 
 }
@@ -95,7 +94,7 @@ input {
 #menuknap {
     display: inline-block;
     position: absolute;
-    z-index: 4000;
+    z-index: 15;
     right: 3vw;
 }
 
@@ -109,13 +108,13 @@ input {
     transition: transform .3s;
     transform-origin: top left;
     background-color: #3F3140;
-    width: 100vw;
     height: 100%;
     position: fixed;
-    top: 0;
-    left: 0;
+    top: 0%;
+    left: 0%;
+    right: 0%;
     text-align: center;
-    z-index: 10;
+    z-index: 9;
 
 
 }
@@ -134,7 +133,7 @@ input {
 #menu img {
     margin-top: 95px;
     margin-bottom: 60px;
-    right: 5;
+    right: 5vw;
 }
 
 
@@ -163,7 +162,7 @@ input {
 
 
 
-@media only screen and (min-width: 1600px) {
+@media only screen and (min-width: 1200px) {
 
     #menuknap {
         display: none;
@@ -203,8 +202,9 @@ input {
 }
 
 
-/*********************************************************************/
-/****************************boxene***********************************/
+
+/*******************************************************************/
+/**************************boxene***********************************/
 
 
 #startside {
@@ -229,6 +229,7 @@ figcaption {
     text-align: center;
     font-size: 0.9rem;
     margin-top: 0.5rem;
+    margin-left:
 
 
 
@@ -250,7 +251,7 @@ figcaption {
 }
 
 .box_small img {
-    margin-left: 8vw;
+    margin-left: 6vw;
     margin-top: 5vw;
 
 }
@@ -273,8 +274,8 @@ figcaption {
     font-family: canada-type-gibson;
     font-weight: 600;
     font-size: 2rem;
-    margin-top: 9vw;
-    margin-left: 10vw
+    margin-top: 98w;
+
 }
 
 /************************** den "store" box **************************/
@@ -302,7 +303,7 @@ h2 {
     font-weight: 600;
     font-size: 2rem;
     margin-top: 18vw;
-    margin-left: 15vw
+    margin-left: 10vw;
 }
 
 
@@ -321,8 +322,8 @@ h1 {
     color: black;
     font-weight: 600;
     font-size: 2rem;
-    margin-top: 9vw;
-    margin-left: 5vw
+    margin-top: 5vw;
+    margin-left: 5vw;
 }
 
 h3 {
@@ -343,9 +344,6 @@ h3 {
     margin-left: 5vw;
     margin-right: 5vw;
     margin-top: 5vw;
-
-
-
     margin-bottom: 10vw;
 }
 
@@ -376,10 +374,18 @@ h3 {
 
 }
 
+.flexcontainer {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 10px;
+}
+
 .link {
+    /*
     position: relative;
-    left: 84vw;
+    left: 82vw;
     bottom: 2vw;
+*/
 }
 
 #pil {
